Fixed resume align issue and link colors

--- a/style.css
+++ b/style.css
@@ -26,3 +26,8 @@ p {
    margin: 0px;
    text-align: center;
 }
+.resume {
+  width: 820px;
+  margin-left: auto ;
+  margin-right: auto ;
+}
